--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vscode-plugin-demo",
+  "name": "vscode-plugin-demo222",
   "displayName": "vscode-plugin-demo",
   "description": "",
   "version": "0.0.5",
